# ffmpeg-android-maker

./: .gitignore  README.md
FFmpegDemo/: build.gradle  settings.gradle
FFmpegDemo/FFmpegLib/: build.gradle
FFmpegDemo/FFmpegLib/src/androidTest/java/com/chadlin/ffmpeglib/: ExampleInstrumentedTest.java
FFmpegDemo/FFmpegLib/src/main/: AndroidManifest.xml
FFmpegDemo/FFmpegLib/src/main/cpp/: CMakeLists.txt  FFmpegMusic.cpp  FFmpegMusic.h  audio_consumer.cpp  audio_consumer.h  ffmpeg_define.h  ffmpeglib.cpp  media_consumer.cpp  media_consumer.h  media_producer.cpp  media_producer.h  safe_queue.h  thread_helper.cpp  thread_helper.h  video_consumer.cpp  video_consumer.h  video_player.cpp  video_player.h  video_player_listener.cpp  video_player_listener.h
FFmpegDemo/FFmpegLib/src/main/cpp/include/arm64-v8a/libavformat/: avformat.h
FFmpegDemo/FFmpegLib/src/main/cpp/include/armeabi-v7a/libavformat/: avio.h
FFmpegDemo/FFmpegLib/src/main/java/com/chadlin/ffmpeglib/: Constants.java  FFmpegVideoManager.java  VideoPlayerCallback.java
FFmpegDemo/FFmpegLib/src/test/java/com/chadlin/ffmpeglib/: ExampleUnitTest.java
FFmpegDemo/app/: build.gradle
FFmpegDemo/app/src/androidTest/java/com/chadlin/ffmpegdemo/: ExampleInstrumentedTest.java
FFmpegDemo/app/src/main/: AndroidManifest.xml
FFmpegDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFmpegDemo/app/src/main/java/com/chadlin/ffmpegdemo/: FileUtils.java  LocalVideoDataSource.java  MainActivity.java  PermissionService.java  VideoItem.java  VideoOperationView.java
FFmpegDemo/app/src/main/res/drawable/: border.xml
FFmpegDemo/app/src/main/res/layout/: activity_main.xml  layout_video_operate.xml
FFmpegDemo/app/src/test/java/com/chadlin/ffmpegdemo/: ExampleUnitTest.java
FFmpegDemo/gradle/wrapper/: gradle-wrapper.properties
